Seemingly random crashes with cycles rendering #41005

Closed
opened 2014-07-09 17:52:07 +02:00 by David M · 7 comments

System Information
Windows 7
i7 3770
32GB Ram
GTX 780

Blender Version
Broken: buildbot builds fedbb88, 2ec0077, 9c48ea3
Worked: 2.71 release and buildbot vc9 builds

Short description of error

Blender crashes on start of cycles rendering (after pressing SHIFT-Z)

Exact steps for others to reproduce the error

This is a bit difficult to report, and as you can see from the tested versions it
took me a while. The error is not easily reproducible. It might be the same as
#41001 or #40989. I'm reporting a new bug, because my steps to reproduce are different:

  • start blender

  • load recent file box.blend

  • shift-z to start rendering

  • close blender

  • repeat up to 15 times until I get a crash

After the first crash the next couple of tries usually crash too. This seems very non
deterministic and looks like some memory allocation problem, if I had to guess.
I have not observed a crash on 2.71release or a vc9 build. It happens both with
and without GPU rendering. My screen resolution is quite high with 2560x1440
and crashes seem to be less often (but don't disappear) if I use a smaller blender
window.

Hope this helps someone where to look.
I might try building blender again to get a debug build to see where it crashes...

till then, David.

**System Information** Windows 7 i7 3770 32GB Ram GTX 780 **Blender Version** Broken: buildbot builds fedbb88, 2ec0077, 9c48ea3 Worked: 2.71 release and buildbot vc9 builds **Short description of error** Blender crashes on start of cycles rendering (after pressing SHIFT-Z) **Exact steps for others to reproduce the error** This is a bit difficult to report, and as you can see from the tested versions it took me a while. The error is not easily reproducible. It might be the same as #41001 or #40989. I'm reporting a new bug, because my steps to reproduce are different: - start blender - load recent file box.blend - shift-z to start rendering - close blender - repeat up to 15 times until I get a crash After the first crash the next couple of tries usually crash too. This seems very non deterministic and looks like some memory allocation problem, if I had to guess. I have not observed a crash on 2.71release or a vc9 build. It happens both with and without GPU rendering. My screen resolution is quite high with 2560x1440 and crashes seem to be less often (but don't disappear) if I use a smaller blender window. Hope this helps someone where to look. I might try building blender again to get a debug build to see where it crashes... till then, David.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @erwin94

Added subscriber: @erwin94

Added subscriber: @mont29

Added subscriber: @mont29
Sergey Sharybin self-assigned this 2014-07-10 12:36:02 +02:00

This issue was referenced by 5e216a6aa9

This issue was referenced by 5e216a6aa9bb7ea6c643d5b873cfae871d434925

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 5e216a6aa9.

Closed by commit 5e216a6aa9.

This issue was referenced by f6a174fd4778e1c39d14d3774600367c69a47a1b

This issue was referenced by f6a174fd4778e1c39d14d3774600367c69a47a1b
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41005
No description provided.